@@ -4,18 +4,18 @@ import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
 import java.nio.file.Path;
+import com.google.gson.Gson;
 
 public class RestApiRequest {
     public static void main(String[] args) throws Exception {
 
         TranscriptAudio transcriptAudio = new TranscriptAudio();
         transcriptAudio.setAudio_url(UploadAudio.uploadAudio(Path.of("audios/AudioApiTest.ogg")));
-        String jsonRequest = """
-                {
-                  "audio_url": "%s",
-                  "speech_models": ["universal-3-pro"]
-                }
-                """.formatted(transcriptAudio.getAudio_url());
+        String jsonRequest = String.format(
+                "{\n"
+                        + "  \"audio_url\": \"%s\",\n"
+                        + "  \"speech_models\": [\"universal-3-pro\"]\n"
+                        + "}", transcriptAudio.getAudio_url());
 
         System.out.println("JSON Body: " + jsonRequest);
 
@@ -30,6 +30,11 @@ public class RestApiRequest {
         HttpResponse<String> postResponse = client.send(postResquest, BodyHandlers.ofString());
 
         System.out.println("POST Response: " + postResponse.body());
+
+        
+        transcriptAudio = gson.fromJson(postResponse.body(), TranscriptAudio.class);
+
+        transcriptAudio.getId();
     }
 
 }
